[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/alterebro-pixel-font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/generator_controller.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[node name="Controller" type="VBoxContainer"]
margin_right = 500.0
margin_bottom = 19.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generator" type="HBoxContainer" parent="."]
margin_right = 500.0
margin_bottom = 15.0

[node name="GeneratorDown" type="Button" parent="Generator"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="GeneratorUp" type="Button" parent="Generator"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="GeneratorAdd" type="Button" parent="Generator"]
margin_left = 39.0
margin_right = 62.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "add"

[node name="Button" type="Label" parent="Generator"]
margin_left = 66.0
margin_top = 3.0
margin_right = 99.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Generator: "

[node name="Number" type="Label" parent="Generator"]
margin_left = 103.0
margin_top = 3.0
margin_right = 108.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "-1"

[node name="Life" type="HBoxContainer" parent="."]
margin_top = 19.0
margin_right = 500.0
margin_bottom = 34.0

[node name="LifeDown" type="Button" parent="Life"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="LifeUp" type="Button" parent="Life"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="Life"]
margin_left = 39.0
margin_top = 3.0
margin_right = 53.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Life: "

[node name="Number" type="Label" parent="Life"]
margin_left = 57.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="BulletsPerArray" type="HBoxContainer" parent="."]
margin_top = 38.0
margin_right = 500.0
margin_bottom = 53.0

[node name="BulletsPerArrayDown" type="Button" parent="BulletsPerArray"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="BulletsPerArrayUp" type="Button" parent="BulletsPerArray"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="BulletsPerArray"]
margin_left = 39.0
margin_top = 3.0
margin_right = 90.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "BulletsPerArray: "

[node name="Number" type="Label" parent="BulletsPerArray"]
margin_left = 94.0
margin_top = 3.0
margin_right = 98.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="IndividualArraySpread" type="HBoxContainer" parent="."]
margin_top = 57.0
margin_right = 500.0
margin_bottom = 72.0

[node name="IndividualArraySpreadDown" type="Button" parent="IndividualArraySpread"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="IndividualArraySpreadUp" type="Button" parent="IndividualArraySpread"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="IndividualArraySpread"]
margin_left = 39.0
margin_top = 3.0
margin_right = 111.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "IndividualArraySpread: "

[node name="Number" type="Label" parent="IndividualArraySpread"]
margin_left = 115.0
margin_top = 3.0
margin_right = 119.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TotalBulletArrays" type="HBoxContainer" parent="."]
margin_top = 76.0
margin_right = 500.0
margin_bottom = 91.0

[node name="TotalBulletArraysDown" type="Button" parent="TotalBulletArrays"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="TotalBulletArraysUp" type="Button" parent="TotalBulletArrays"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="TotalBulletArrays"]
margin_left = 39.0
margin_top = 3.0
margin_right = 96.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "TotalBulletArrays: "

[node name="Number" type="Label" parent="TotalBulletArrays"]
margin_left = 100.0
margin_top = 3.0
margin_right = 104.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TotalArraySpread" type="HBoxContainer" parent="."]
margin_top = 95.0
margin_right = 500.0
margin_bottom = 110.0

[node name="TotalArraySpreadDown" type="Button" parent="TotalArraySpread"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="TotalArraySpreadUp" type="Button" parent="TotalArraySpread"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="TotalArraySpread"]
margin_left = 39.0
margin_top = 3.0
margin_right = 96.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "TotalArraySpread: "

[node name="Number" type="Label" parent="TotalArraySpread"]
margin_left = 100.0
margin_top = 3.0
margin_right = 104.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="BaseSpinSpeed" type="HBoxContainer" parent="."]
margin_top = 114.0
margin_right = 500.0
margin_bottom = 129.0

[node name="BaseSpinSpeedDown" type="Button" parent="BaseSpinSpeed"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="BaseSpinSpeedUp" type="Button" parent="BaseSpinSpeed"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="BaseSpinSpeed"]
margin_left = 39.0
margin_top = 3.0
margin_right = 87.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "BaseSpinSpeed: "

[node name="Number" type="Label" parent="BaseSpinSpeed"]
margin_left = 91.0
margin_top = 3.0
margin_right = 95.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="SpinSpeedPeriod" type="HBoxContainer" parent="."]
margin_top = 133.0
margin_right = 500.0
margin_bottom = 148.0

[node name="SpinSpeedPeriodDown" type="Button" parent="SpinSpeedPeriod"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="SpinSpeedPeriodUp" type="Button" parent="SpinSpeedPeriod"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="SpinSpeedPeriod"]
margin_left = 39.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "SpinSpeedPeriod: "

[node name="Number" type="Label" parent="SpinSpeedPeriod"]
margin_left = 98.0
margin_top = 3.0
margin_right = 102.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="SpinVariation" type="HBoxContainer" parent="."]
margin_top = 152.0
margin_right = 500.0
margin_bottom = 167.0

[node name="SpinVariationDown" type="Button" parent="SpinVariation"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="SpinVariationUp" type="Button" parent="SpinVariation"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="SpinVariation"]
margin_left = 39.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "SpinVariation: "

[node name="Number" type="Label" parent="SpinVariation"]
margin_left = 88.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="FireRate" type="HBoxContainer" parent="."]
margin_top = 171.0
margin_right = 500.0
margin_bottom = 186.0

[node name="FireRateDown" type="Button" parent="FireRate"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="FireRateUp" type="Button" parent="FireRate"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="FireRate"]
margin_left = 39.0
margin_top = 3.0
margin_right = 66.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "FireRate: "

[node name="Number" type="Label" parent="FireRate"]
margin_left = 70.0
margin_top = 3.0
margin_right = 74.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="FireInterval" type="HBoxContainer" parent="."]
margin_top = 190.0
margin_right = 500.0
margin_bottom = 205.0

[node name="FireIntervalDown" type="Button" parent="FireInterval"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="FireIntervalUp" type="Button" parent="FireInterval"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="FireInterval"]
margin_left = 39.0
margin_top = 3.0
margin_right = 77.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "FireInterval: "

[node name="Number" type="Label" parent="FireInterval"]
margin_left = 81.0
margin_top = 3.0
margin_right = 85.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="CyclesPerInterval" type="HBoxContainer" parent="."]
margin_top = 209.0
margin_right = 500.0
margin_bottom = 224.0

[node name="CyclesPerIntervalDown" type="Button" parent="CyclesPerInterval"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="CyclesPerIntervalUp" type="Button" parent="CyclesPerInterval"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="CyclesPerInterval"]
margin_left = 39.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "CyclesPerInterval: "

[node name="Number" type="Label" parent="CyclesPerInterval"]
margin_left = 98.0
margin_top = 3.0
margin_right = 102.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="BulletSpeed" type="HBoxContainer" parent="."]
margin_top = 228.0
margin_right = 500.0
margin_bottom = 243.0

[node name="BulletSpeedDown" type="Button" parent="BulletSpeed"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="BulletSpeedUp" type="Button" parent="BulletSpeed"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="BulletSpeed"]
margin_left = 39.0
margin_top = 3.0
margin_right = 78.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "BulletSpeed: "

[node name="Number" type="Label" parent="BulletSpeed"]
margin_left = 82.0
margin_top = 3.0
margin_right = 86.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="BulletLife" type="HBoxContainer" parent="."]
margin_top = 247.0
margin_right = 500.0
margin_bottom = 262.0

[node name="BulletLifeDown" type="Button" parent="BulletLife"]
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="BulletLifeUp" type="Button" parent="BulletLife"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Button" type="Label" parent="BulletLife"]
margin_left = 39.0
margin_top = 3.0
margin_right = 71.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "BulletLife: "

[node name="Number" type="Label" parent="BulletLife"]
margin_left = 75.0
margin_top = 3.0
margin_right = 79.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "0"
[connection signal="pressed" from="Generator/GeneratorDown" to="." method="_on_GeneratorDown_pressed"]
[connection signal="pressed" from="Generator/GeneratorUp" to="." method="_on_GeneratorUp_pressed"]
[connection signal="pressed" from="Generator/GeneratorAdd" to="." method="_on_GeneratorAdd_pressed"]
[connection signal="pressed" from="Life/LifeDown" to="." method="_on_LifeDown_pressed"]
[connection signal="pressed" from="Life/LifeUp" to="." method="_on_LifeUp_pressed"]
[connection signal="pressed" from="BulletsPerArray/BulletsPerArrayDown" to="." method="_on_BulletsPerArrayDown_pressed"]
[connection signal="pressed" from="BulletsPerArray/BulletsPerArrayUp" to="." method="_on_BulletsPerArrayUp_pressed"]
[connection signal="pressed" from="IndividualArraySpread/IndividualArraySpreadDown" to="." method="_on_IndividualArraySpreadDown_pressed"]
[connection signal="pressed" from="IndividualArraySpread/IndividualArraySpreadUp" to="." method="_on_IndividualArraySpreadUp_pressed"]
[connection signal="pressed" from="TotalBulletArrays/TotalBulletArraysDown" to="." method="_on_TotalBulletArraysDown_pressed"]
[connection signal="pressed" from="TotalBulletArrays/TotalBulletArraysUp" to="." method="_on_TotalBulletArraysUp_pressed"]
[connection signal="pressed" from="TotalArraySpread/TotalArraySpreadDown" to="." method="_on_TotalArraySpreadDown_pressed"]
[connection signal="pressed" from="TotalArraySpread/TotalArraySpreadUp" to="." method="_on_TotalArraySpreadUp_pressed"]
[connection signal="pressed" from="BaseSpinSpeed/BaseSpinSpeedDown" to="." method="_on_BaseSpinSpeedDown_pressed"]
[connection signal="pressed" from="BaseSpinSpeed/BaseSpinSpeedUp" to="." method="_on_BaseSpinSpeedUp_pressed"]
[connection signal="pressed" from="SpinSpeedPeriod/SpinSpeedPeriodDown" to="." method="_on_SpinSpeedPeriodDown_pressed"]
[connection signal="pressed" from="SpinSpeedPeriod/SpinSpeedPeriodUp" to="." method="_on_SpinSpeedPeriodUp_pressed"]
[connection signal="pressed" from="SpinVariation/SpinVariationDown" to="." method="_on_SpinVariationDown_pressed"]
[connection signal="pressed" from="SpinVariation/SpinVariationUp" to="." method="_on_SpinVariationUp_pressed"]
[connection signal="pressed" from="FireRate/FireRateDown" to="." method="_on_FireRateDown_pressed"]
[connection signal="pressed" from="FireRate/FireRateUp" to="." method="_on_FireRateUp_pressed"]
[connection signal="pressed" from="FireInterval/FireIntervalDown" to="." method="_on_FireIntervalDown_pressed"]
[connection signal="pressed" from="FireInterval/FireIntervalUp" to="." method="_on_FireIntervalUp_pressed"]
[connection signal="pressed" from="CyclesPerInterval/CyclesPerIntervalDown" to="." method="_on_CyclesPerIntervalDown_pressed"]
[connection signal="pressed" from="CyclesPerInterval/CyclesPerIntervalUp" to="." method="_on_CyclesPerIntervalUp_pressed"]
[connection signal="pressed" from="BulletSpeed/BulletSpeedDown" to="." method="_on_BulletSpeedDown_pressed"]
[connection signal="pressed" from="BulletSpeed/BulletSpeedUp" to="." method="_on_BulletSpeedUp_pressed"]
[connection signal="pressed" from="BulletLife/BulletLifeDown" to="." method="_on_BulletLifeDown_pressed"]
[connection signal="pressed" from="BulletLife/BulletLifeUp" to="." method="_on_BulletLifeUp_pressed"]
